# agent-session-mgr

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
docs/: api-reference.md  architecture.md  developer-guide.md  user-guide.md
src/: main.rs
src/session_manager/: claude.rs  mod.rs  utils.rs
src/static/: index.html
