[package]
name = "claude-session-mgr"
version = "0.1.0"
description = "Session Manager for Claude Code"
edition = "2021"
rust-version = "1.85.0"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
tower = "0.4"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "s"
strip = "symbols"
